tests/baselines/reference/ModuleWithExportedAndNonExportedVariables.errors.txt
ModuleWithExportedAndNonExportedVariables.ts(11,11): error TS2339: Property 'y' does not exist on type 'typeof A'.


==== ModuleWithExportedAndNonExportedVariables.ts (1 errors) ====
    module A {
        export var x = 'hello world'
        var y = 12;
    }
    
    
    var x: string;
    var x = A.x;
    
    // Error, since y is not exported
    var y = A.y;
              ~
!!! error TS2339: Property 'y' does not exist on type 'typeof A'.
    